{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 103,
  "lineage": "cd6a002c-b7f5-b4e5-6b9c-97533af5475b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "project3_lb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:545533085693:loadbalancer/app/tf-lb120231011194821299100000003/03059c1019c6d093",
            "arn_suffix": "app/tf-lb120231011194821299100000003/03059c1019c6d093",
            "desync_mitigation_mode": "defensive",
            "dns_name": "tf-lb120231011194821299100000003-1343086294.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:545533085693:loadbalancer/app/tf-lb120231011194821299100000003/03059c1019c6d093",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "tf-lb120231011194821299100000003",
            "name_prefix": "tf-lb1",
            "preserve_host_header": false,
            "security_groups": [
              "sg-081b20417c39dc6ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-053f132f2e2cb24e0"
              },
              {
                "subnet_id": "subnet-075a452009e940e5b"
              },
              {
                "subnet_id": "subnet-0c9a934f3ab4a5091"
              },
              {
                "subnet_id": "subnet-0db9c08e902d59229"
              }
            ],
            "subnets": [
              "subnet-053f132f2e2cb24e0",
              "subnet-075a452009e940e5b",
              "subnet-0c9a934f3ab4a5091",
              "subnet-0db9c08e902d59229"
            ],
            "tags": {
              "Description": "Project 3 terraform created load balancer",
              "Name": "Load Balancer with Target Group and Listener Configured"
            },
            "tags_all": {
              "Description": "Project 3 terraform created load balancer",
              "Name": "Load Balancer with Target Group and Listener Configured"
            },
            "vpc_id": "vpc-043d42f6449b393cb",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.project3-sg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "project3_lb1_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:545533085693:listener/app/tf-lb120231011194821299100000003/03059c1019c6d093/f865426bd5ea0037",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:545533085693:targetgroup/tf-tg120231011194815768300000001/9ebc77f6b9b8af91",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:545533085693:listener/app/tf-lb120231011194821299100000003/03059c1019c6d093/f865426bd5ea0037",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:545533085693:loadbalancer/app/tf-lb120231011194821299100000003/03059c1019c6d093",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Description": "AWS load balancer listener created using terraform for project 3"
            },
            "tags_all": {
              "Description": "AWS load balancer listener created using terraform for project 3"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.project3_lb1",
            "aws_lb_target_group.project3_lb1_target_group",
            "aws_security_group.project3-sg1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "project3_lb1_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:545533085693:targetgroup/tf-tg120231011194815768300000001/9ebc77f6b9b8af91",
            "arn_suffix": "targetgroup/tf-tg120231011194815768300000001/9ebc77f6b9b8af91",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:545533085693:targetgroup/tf-tg120231011194815768300000001/9ebc77f6b9b8af91",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tf-tg120231011194815768300000001",
            "name_prefix": "tf-tg1",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Description": "Project3-LoadBalancer1_TargetGroup-TF"
            },
            "tags_all": {
              "Description": "Project3-LoadBalancer1_TargetGroup-TF"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-043d42f6449b393cb"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "project3-sg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:545533085693:security-group/sg-081b20417c39dc6ad",
            "description": "security group created for launch template specified in auto scaling group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Opens outbound traffic to all sources",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-081b20417c39dc6ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Opens http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Opens ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Project3_SecurityGroup120231011194815770400000002",
            "name_prefix": "Project3_SecurityGroup1",
            "owner_id": "545533085693",
            "revoke_rules_on_delete": false,
            "tags": {
              "Description": "Project3 SecurityGroup1 for Ports 22|80"
            },
            "tags_all": {
              "Description": "Project3 SecurityGroup1 for Ports 22|80"
            },
            "timeouts": null,
            "vpc_id": "vpc-043d42f6449b393cb"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}